Fixed the issue where pictures overlapped the menu

--- a/css/style.css
+++ b/css/style.css
@@ -413,9 +413,7 @@ img.odd {
     border-radius: 50%;
     margin-top: 5em;
     margin-bottom: 5em;
-    justify-items: center;
-    -webkit-transform: scaleX(-1);
-    transform: scaleX(-1);
+
 }
 
 img.study {
